--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
   ],
   "scripts": {
     "build": "tsup",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts .",
+    "lint:fix": "eslint --fix --ignore-path .eslintignore --ext .js,.ts .",
+    "prettier": "npx prettier src --check",
+    "prettier:fix": "npm run prettier -- --write",
+    "format": "npm run prettier:fix && npm run lint:fix",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -28,6 +33,11 @@
   },
   "homepage": "https://github.com/IlhanYapici/react-utils#readme",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "6.7.5",
+    "@typescript-eslint/parser": "6.7.5",
+    "eslint": "8.51.0",
+    "eslint-config-prettier": "9.0.0",
+    "prettier": "3.0.3",
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
