--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,5 +12,6 @@
 		"source.organizeImports": true,
 		"source.formatDocument": true,
 		"source.fixAll.eslint": true
-	}
+	},
+	"editor.tabSize": 2
 }
