--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -5,5 +5,6 @@
 	"trailingComma": "all",
 	"endOfLine": "lf",
 	"useTabs": true,
-	"tabWidth": 2
+	"tabWidth": 2,
+	"plugins": ["prettier-plugin-jsdoc"]
 }
