--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"eslint-config-prettier": "9.0.0",
 		"minimist": "1.2.8",
 		"prettier": "3.0.3",
+		"prettier-plugin-jsdoc": "1.1.1",
 		"ts-node": "10.9.1",
 		"tsup": "7.2.0",
 		"typescript": "5.2.2"
