--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "ts-node": "10.9.1",
     "tsup": "7.2.0",
     "typescript": "5.2.2"
-  }
+  },
+  "dependencies": {
+		"dayjs": "1.11.10"
+	}
 }
